hphp/hack/test/typecheck/construct/missing_init_tany.php.exp
ERROR: File "missing_init_tany.php", line 9, characters 9-9:
Class `Test\C` has properties that cannot be null and aren't always set in `__construct`. (NastCheck[3015])
  File "missing_init_tany.php", line 14, characters 17-19:
  `$this->li` is not initialized.
